--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 
 body {
   background-color: #F5F4F0;
+  font-family: "Open Sans", system-ui;
+  color: #1B1B1B;
 }
 
 #page {
@@ -13,14 +15,70 @@ body {
   margin: 88px auto 65px;
 }
 
+p#headline strong {
+  color: #E1624F;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+h1 {
+  font-size: 36px;
+}
+
+section#main-content p {
+  font-style: italic;
+  text-align: center;
+}
+
 section#main-content img {
   width: 100%;
   height: 660px;
   object-fit: cover;
 }
 
+p {
+  color: #333333;
+}
+
+h2 {
+  font-size: 32px;
+}
+
+h3 {
+  font-size: 28px;
+}
+
+
+
 ol img {
   width: 100%;
   height: 350px;
   object-fit: cover;
+}
+
+ul li::marker{
+  color: #333333;
+  /* list-style-position: inside; */
+  font-size: 16px;
+}
+
+ul li {
+  color: #0C51A7;
+  font-weight: 700;
+  list-style: disc;
+  
+}
+
+ul#colors li:nth-child(1) {
+  color: #591B98;
+}
+ul#colors li:nth-child(2) {
+  color: #E5245E;
+}
+ul#colors li:nth-child(3) {
+  color: #E95E10;
+}
+
+p#description {
+  text-align: center;
 }
