--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
   margin: 88px auto 65px;
 }
 
+header {
+  margin-bottom: 40px;
+}
+
 p#headline strong {
   color: #E1624F;
   font-weight: 700;
@@ -23,6 +27,27 @@ p#headline strong {
 
 h1 {
   font-size: 36px;
+
+  margin-top: 8px;
+}
+
+section {
+  margin-bottom: 40px;
+}
+
+#divisor {
+  width: 100%;
+  height: 1px;
+  background-color: #d9d9d9;
+}
+
+section#main-content img {
+  width: 100%;
+  height: 660px;
+  object-fit: cover;
+
+  border-radius: 28px;
+  margin-bottom: 24px;
 }
 
 section#main-content p {
@@ -30,10 +55,8 @@ section#main-content p {
   text-align: center;
 }
 
-section#main-content img {
-  width: 100%;
-  height: 660px;
-  object-fit: cover;
+#title-list {
+  padding: 64px 0;
 }
 
 p {
@@ -42,31 +65,43 @@ p {
 
 h2 {
   font-size: 32px;
+  margin: 2px 0 8px;
 }
-
-h3 {
-  font-size: 28px;
-}
-
-
 
 ol img {
   width: 100%;
   height: 350px;
   object-fit: cover;
+  border-radius: 28px;
+
+  margin-bottom: 20px
+}
+
+ol li {
+  list-style-position: inside;
 }
 
 ul li::marker{
   color: #333333;
   /* list-style-position: inside; */
-  font-size: 16px;
+  font-size: 12px;
+  margin-left: 16px;
+}
+
+
+h3 {
+  font-size: 28px;
+  margin-bottom: 4px;
 }
 
 ul li {
   color: #0C51A7;
   font-weight: 700;
   list-style: disc;
-  
+
+  padding-left: 0;
+  margin-left: 16px;
+  list-style-position: outside;
 }
 
 ul#colors li:nth-child(1) {
@@ -79,6 +114,21 @@ ul#colors li:nth-child(3) {
   color: #E95E10;
 }
 
+ul {
+  margin-bottom: 48px;
+}
+
 p#description {
   text-align: center;
+
+  margin-top: 48px;
+}
+
+footer {
+  text-align: center;
+  padding-bottom: 48px;
+}
+
+footer img {
+  vertical-align: middle;
 }
